Build tool updates. Added JVM options to build pack configuration