@@ -29,6 +29,7 @@ bootBuildInfo.mustRunAfter processResources
 
 bootBuildImage {
     imageName = "$organisation/$rootProject.name:$project.version"
+    environment['BPE_APPEND_JAVA_OPTS'] = "--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
 }
 
 compileJava.dependsOn(processResources)
